@@ -41,6 +41,8 @@ hts-tvheadend (2.11-WIP) hts; urgency=low
     there are errors. Also recordings that do not complete successfully
     are correctly reported as failed entries. Ticket #131
 
+  * Add support for Irdeto EMM
+
 hts-tvheadend (2.10) hts; urgency=high
 
   * Fix a crash in HTSP server.
